[project]
name = "blpapi-mcp"
version = "0.1.0"
description = "A MCP server providing financial data from Bloomberg blpapi"
readme = "README.md"
authors = [
    { name = "Samuel Seng", email = "djsamseng@gmail.com" }
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "blpapi>=3.25.3",
    "mcp[cli]>=1.6.0",
    "pandas>=2.0.0",
    "xbbg>=0.7.7",
]

[project.scripts]
blpapi-mcp = "blpapi_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
blpapi = { index = "blpapi" }

[[tool.uv.index]]
name = "blpapi"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
explicit = true
